# xxxpython_package_namexxx

./: .gitignore  .readthedocs.yaml  CHANGES.md  Jenkinsfile  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: publish.yml
docs/: Makefile  requirements.txt
docs/source/: autosummary.rst  autosummary_include.rst  classes_and_functions.rst  conf.py  index.md  initialisation.md  install.md  markdown_syntax.md  quickstart.md  todolist.md  usage.md
docs/source/_api/: conf.py  index.rst  xxxpython_package_namexxx.cl_utils.rst  xxxpython_package_namexxx.commonutils.getpackagepath.rst  xxxpython_package_namexxx.commonutils.rst  xxxpython_package_namexxx.docstring_test.rst  xxxpython_package_namexxx.rst  xxxpython_package_namexxx.utKit.rst
docs/source/_autosummary/: xxxpython_package_namexxx.cl_utils.rst  xxxpython_package_namexxx.cl_utils.tab_complete.rst  xxxpython_package_namexxx.commonutils.rst  xxxpython_package_namexxx.docstring_test.docsting_test.rst  xxxpython_package_namexxx.docstring_test.rst  xxxpython_package_namexxx.utKit.rst  xxxpython_package_namexxx.utKit.utKit.rst
docs/source/_includes/: description.rst  development.rst  documentation.rst  installation.md  installation.rst  installation_bk.rst  issues.rst  markdown_syntax.md  tutorial.rst  usage.rst
docs/source/apidocs/: index.rst
docs/source/apidocs/xxxpython_package_namexxx/: xxxpython_package_namexxx.__version__.md  xxxpython_package_namexxx.cl_utils.md  xxxpython_package_namexxx.commonutils.getpackagepath.md  xxxpython_package_namexxx.commonutils.md  xxxpython_package_namexxx.md  xxxpython_package_namexxx.utKit.md
xxxpython_package_namexxx/: cl_utils.py  default_settings.yaml  docstring_test.py  setup.cfg  test_settings.yaml  utKit.py
xxxpython_package_namexxx/commonutils/: getpackagepath.py
xxxpython_package_namexxx/tests/: __init__.py  test_cl_utils.py
xxxpython_package_namexxx/tests/input/: example_settings.yaml
