[build-system]
requires = ["setuptools>=70", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "xxxpython_package_namexxx"
dynamic = ["version"]
description = "xxxpackage_descriptionxxx"
authors = [
    {name = "xxxauthorNamexxx", email= "xxxauthor@email.xxx"},
]
keywords = ['xxxpackage_keywords_comma_sepxxx']
requires-python = ">=3.11"
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Utilities"
]
dependencies = [
    'pyyaml',
    'fundamentals'
]

[project.urls]
"Homepage" = "https://github.com/thespacedoctor/xxxpython_package_namexxx"

[project.optional-dependencies]
docs = [
    "build",
    "sphinx",
    "sphinx-autodoc2",
    "myst-parser",
    "furo",
    "sphinx-inline-tabs",
    "sphinxext-opengraph",
    "sphinx-autobuild",
    "linkify-it-py",
    "sphinxcontrib-mermaid",
    "sphinx-togglebutton",
    "sphinx_copybutton",
    "sphinx_tippy",
    "sphinx_design",
    "pygments-csv-lexer",
    "sphinxcontrib-svg2pdfconverter",
    "sphinx-remove-toctrees",
    "sphinxcontrib.bibtex",
]
tests = [
    "pytest",
    "pytest-cov",
    "nose2"
]
dev = [
    "xxxpython_package_namexxx[tests, docs]",
    "build",
    "twine"
]

# THESE ARE ENTRY POINTS USED FOR THE CL-INTERFACE
[project.scripts]
xxxpython_package_namexxx = 'xxxpython_package_namexxx.cl_utils:main'


[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"



